# OopMod2

./: CMakeLists.txt  Theory.md  main.cpp
.github/workflows/: build_cmake.yml
random/: LinearCongruentRandom.h
sequence/: ConsoleReadingSequenceHolder.cpp  ConsoleReadingSequenceHolder.h  RandomSequenceFileWriter.cpp  RandomSequenceFileWriter.h  SequenceHolder.cpp  SequenceHolder.h
test/: tests.cpp
util/: Collections.cpp  Collections.h
